# agent13

./: .flake8  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  USER_GUIDE.md  agent13.py  dotenv.example  headless.py  pyproject.toml  pytest.ini
agent13/: __init__.py  __main__.py  batch.py  cli.py  clipboard.py  config.py  config_paths.py  context.py  core.py  debug_log.py  default_config.toml  default_prompts.yaml  events.py  history.py  llm.py  mcp.py  models.py  persistence.py  prompts.py  queue.py  sandbox.py  snippets.py  tools.py  updater.py  yaml_store.py
tests/: conftest.py  test_agent13.py  test_batch_mode.py  test_clear_during_tool_loop.py  test_clipboard.py  test_coercion.py  test_config.py  test_core.py  test_ctrl_c.py  test_display.py  test_edit_file_ast_preview.py  test_edit_file_fuzzy.py  test_edit_file_line_regions.py  test_edit_file_snapshot.py  test_error_handling.py  test_events.py  test_history.py  test_interrupt_consistency.py  test_journal.py  test_llm.py  test_manual_test_regressions.py  test_mcp.py  test_pause_resume_bugs.py  test_pause_resume_wishlist_bugs.py  test_prompts.py  test_queue.py  test_queue_interrupt_logging.py  test_reasoning_collapse.py  test_reflection_status.py  test_reflection_token_usage.py  test_sandbox.py  test_security.py  test_skills.py  test_snippets.py  test_token_usage.py  test_tool_call_no_content.py  test_tool_groups.py  test_tools.py  test_tui_commands.py  test_tui_scroll.py  (+1 more)
tools/: __init__.py  command.py  edit_file.py  read_file.py  security.py  skill.py  (+4 more)
(+28 files in other folders)
